<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_AntefactionActivity"
    android:background="@color/white"
    tools:context=".AntefactionActivity">

    <ImageView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/welcome"
        android:src="@drawable/hello"
        app:layout_constraintEnd_toStartOf="@id/welcome"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/login"
        android:textColor="@color/textDescription"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/hello"
        app:layout_constraintTop_toBottomOf="@+id/hello"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginWithEmail"
        android:textColor="@color/textDescription"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text"
        android:layout_marginBottom="32dp"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="14dp"
        android:textColor="@color/textEditText"
        android:textColorHint="@color/textEditText"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/isNotFilling"
        android:text="@string/next"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/enterWhithHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginWithHelp"
        android:textColor="@color/textDescription"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_marginBottom="56dp"
        android:text="@string/loginWithYandex"
        android:textColor="@color/black"
        android:textSize="17sp"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>